Link for Lack of compassion

--- a/content/Lack of compassion.html
+++ b/content/Lack of compassion.html
@@ -3,18 +3,41 @@
 <p><strong>Compassion means to suffer with someone and feel together</strong>. A lack of compassion typically results in and from the closing of eyes and ears, halting the perception of the suffering of others, being blind and deaf to the afflictions one often has contributed in creating, willingly or not. Without compassion we end up with, well, much of the world as it is today. Killing with compassion is possible, industrial slaughter is not. Compassion is, more importantly, recognising and feeling someone else's feelings <em>and</em> taking an active role in somehow helping the afflicted.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Lack of empathy.html">Lack of empathy</a></strong></li>
-	<li>  <strong><a href="Immoral justifications.html">Immoral justifications</a></strong></li>
-	<li>  <strong><a href="Cognitive dissonance.html">Cognitive dissonance</a></strong></li>
-	<li>  <strong><a href="Mistreatment of animals.html">Mistreatment of animals</a></strong></li>
-	<li>  <strong><a href="Animal views.html">Animal views</a></strong></li>
-	<li>  <strong><a href="Meat eating.html">Meat eating</a></strong></li>
-	<li>  <strong><a href="Industrial slaughter.html">Industrial slaughter</a></strong></li>
-	<li>  <strong><a href="Mistreatment of other humans.html">Mistreatment of other humans</a></strong></li>
-	<li>  <strong><a href="Inequality.html">Inequality</a></strong></li>
-	<li>  <strong><a href="Modern slavery.html">Modern slavery</a></strong></li>
-	<li>  <strong><a href="Genocide.html">Genocide</a></strong></li>
-	<li>  <strong><a href="Evil.html">Evil</a></strong></li>
+	<li><a href="Animal views.html">Animal views</a> - I was posed the question by my wife recently why I of all people decided to have a child in a time where the birth rate has been decreasing due to worries about the future, the economy, etc. Shouldn't I, someone who has almost made "the coming collapse" my hobby, be the one least likely to put new life on the earth? It's an interesting question but not difficult to answer. I believe I have already given up what people fear is being taken away from them and I also fear the current state of the world more than many others. Things are dark now, though they can seem bright to those who won't look. My daughter being born into a world where the present state of things will and must continue is a much darker thought than believing she's been born at a time of change and, if you will, "collapse". And no, I am not so naive as to not include aspects like increasing risks of violent conflicts, societal turmoil, lack of food, water, electricity, just overall chaos and loss, yet I believe the frequently hidden aspects of our smoothly running systems are much, much worse than whatever's approaching. The lack of compassion most people show for the short lives of the majority of animals serving humanity is something that utterly baffles me and, with some luck, we're at peak levels approaching decline.</li>
+	<li><a href="Apathy.html">Apathy</a></li>
+	<li><a href="Blaming the people.html">Blaming the people</a> - Guilt, shame, and blame can be useful correctors, as long as you point at yourself before pointing at the faults of others.</li>
+	<li><a href="Carelessness.html">Carelessness</a></li>
+	<li><a href="Delusional domination of nature.html">Delusional domination of nature</a> - Humping away while wondering why our asses hurt so bad.</li>
+	<li><a href="Discrimination.html">Discrimination</a></li>
+	<li><a href="Disinformation.html">Disinformation</a> - Isn't it strange that the word discompassionate is frequently uttered as a positive statement about someone's actions?</li>
+	<li><a href="Dispositionism.html">Dispositionism</a> - Without care or emotion we must fall back on our heuristics, stereotypes, prejudices, and imagined dispositions.</li>
+	<li><a href="Emotional crisis.html">Emotional crisis</a></li>
+	<li><a href="Evil.html">Evil</a></li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a></li>
+	<li><a href="Genocide.html">Genocide</a></li>
+	<li><a href="Immoral justifications.html">Immoral justifications</a></li>
+	<li><a href="Industrial slaughter.html">Industrial slaughter</a> - Where in the combination of those two words is compassion to be found?</li>
+	<li><a href="Lack of a living world view.html">Lack of a living world view</a> - The people I've met who most clearly view the world as dead and mechanistic have been the most dead and mechanistic people with the least compassion.</li>
+	<li><a href="Lack of empathy.html">Lack of empathy</a> - Compassion and empathy are closely related, empathy tending to be the less active and acting of the two. They tend to swing back and forth together.</li>
+	<li><a href="Meaning crisis.html">Meaning crisis</a> - Compassion is essential for meaning.</li>
+	<li><a href="Meat eating.html">Meat eating</a> - Humans can, as opposed to most other organisms, live in a multitude of ways, and we're opting for this way? You should doubt everyone's judgement, especially your own.</li>
+	<li><a href="Mistreatment of animals.html">Mistreatment of animals</a></li>
+	<li><a href="Mistreatment of other humans.html">Mistreatment of other humans</a></li>
+	<li><a href="Modern slavery.html">Modern slavery</a></li>
+	<li><a href="Oppressive tyrannies for the good of its victims.html">Oppressive tyrannies for the good of its victims</a></li>
+	<li><a href="Parenting.html">Parenting</a> - As a parent, you come early on to a fork in the road. Do you raise your child to fare well in the world as it is, promoting the discompassionate, competitive, hardened, stoic, "strong" path? Or do you take the path up into the mountains, knowing the suffering that awaits your little one? Then again, those who have taken the path into the depths of the valley, what do they feel on rare cloudless nights when the moonlight reveals the snowtipped peaks?</li>
+	<li><a href="Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
+	<li><a href="Power concentration to the wrong people.html">Power concentration to the wrong people</a> - Power goes to the discompassionate.</li>
+	<li><a href="Racism.html">Racism</a></li>
+	<li><a href="Selfishness.html">Selfishness</a> - Incapable of feeling for others, at least you can hear your own stomach rumbling.</li>
+	<li><a href="Sexism.html">Sexism</a></li>
+	<li><a href="Spiritual metacrisis.html">Spiritual metacrisis</a> - "Teach this triple truth to all: A generous heart, kind speech, and a life of service and compassion are the things which renew humanity." - Buddha</li>
+	<li><a href="Surveillance.html">Surveillance</a></li>
+	<li><a href="The Dark Triad.html">The Dark Triad</a></li>
+	<li><a href="The desacration of all places.html">The desacration of all places</a> - What we spoil must already be rotting inside our hearts.</li>
+	<li><a href="Violence.html">Violence</a></li>
+	<li><a href="War.html">War</a></li>
+	<li><a href="Wisdom crisis.html">Wisdom crisis</a> - There can be no wisdom without compassion.</li>
 </ul>
 <br>
 <br>
