--- a/content/Investing.html
+++ b/content/Investing.html
@@ -3,18 +3,27 @@
 <p>An investment is <strong><a href="https://en.wikipedia.org/wiki/Investment">the commitment of resources to achieve later benefits</a></strong>. There are many types of investments such as stocks, bonds, cash, real estate, loans, cryptocurrencies, and more. Investments must include the notion of ownership and for an investment to be successful it usually means that either you won and someone else lost (zero-sum) or whatever area you invested in grew financially. Another important point is that any investment into something is an action that tries to shape the world, meaning that whatever is invested in will be pushed to succeed while whatever isn't invested in will be ignored. <a href="https://www.etymonline.com/word/invest"><strong>Dressing parts of the future in your own colours</strong></a> makes you wonder what future generations will think of the ruins covered in our tattered robes.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Quantification.html">Quantification</a></strong></li>
-	<li>  <strong><a href="Carbon fundamentalism.html">Carbon fundamentalism</a></strong></li>
-	<li>  <strong><a href="News.html">News</a></strong></li>
-	<li>  <strong><a href="Lack of systems thinking.html">Lack of systems thinking</a></strong></li>
-	<li>  <strong><a href="Hemispherical asymmetry (Brain).html">Hemispherical asymmetry (Brain)</a></strong></li>
-	<li>  <strong><a href="Wisdom crisis.html">Wisdom crisis</a></strong></li>
-	<li>  <strong><a href="Ignoring complexity.html">Ignoring complexity</a></strong></li>
-	<li>  <strong><a href="Map and territory.html">Map and territory</a></strong></li>
-	<li>  <strong><a href="Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></strong></li>
-	<li>  <strong><a href="Illusion of understanding.html">Illusion of understanding</a></strong></li>
-	<li>  <strong><a href="Knowledge isn't wisdom.html">Knowledge isn't wisdom</a></strong></li>
-	<li>  <strong><a href="Educational crisis.html">Educational crisis</a></strong></li>
+	<li><a href="Big tech.html">Big tech</a></li>
+	<li><a href="Business-as-usual narrative.html">Business-as-usual narrative</a> - I recently read the results of a poll conducted in a smaller city in Sweden. One of the questions was "what are you planning to do to live more sustainably and climate-friendly within the next year" and the third most selected response was "buy stocks". Hardly even better than nothing.</li>
+	<li><a href="Capitalism.html">Capitalism</a></li>
+	<li><a href="Cars.html">Cars</a> - We've invested so much into a society dependent on and adapted for cars, we can't suddenly diverge.</li>
+	<li><a href="Consumerism.html">Consumerism</a> - Invest and consume your way out of every problem we face.</li>
+	<li><a href="Debt.html">Debt</a> - Zero-sum game with ever-increasing externalised debt. Remind me again, how exactly did we get here? If you're an economist, get in touch, and bring a translator. Any other language than economics will do just fine.</li>
+	<li><a href="Electric vehicle solutions.html">Electric vehicle solutions</a> - Isn't it cute to witness the no-doubt ethically minded little saints putting "I bought this before Elon went crazy"-stickers on their Teslas? And when, exactly, was that?</li>
+	<li><a href="Evil.html">Evil</a> - Evil through seemingly neutral means.</li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a> - A clever investor should never dabble in morals, lest he ceases to be a clever investor.</li>
+	<li><a href="Greed.html">Greed</a></li>
+	<li><a href="Growth.html">Growth</a></li>
+	<li><a href="Immoral justifications.html">Immoral justifications</a> - Decreasing the amplitude of my condescension slightly, I understand the dilemma of being part of a society where the choice to remain outside of the market leaves one's money to be nibbled by inflation, what is one to do? We all have to come to terms with the fact that we are often forced into behaviours fringed with immoral justifications. When future generations look back on us as the lumbering giants who ate the world, maybe the stories will at least tell of some giants who hesitated slightly.</li>
+	<li><a href="Lobbyism.html">Lobbyism</a> - Lobbyists lobby for the gain of their investments.</li>
+	<li><a href="Moloch.html">Moloch</a> - Being financially invested keeps one locked into the Moloch-driven mindset.</li>
+	<li><a href="Power concentration to the wrong people.html">Power concentration to the wrong people</a></li>
+	<li><a href="Profit.html">Profit</a> - People invest to make profit. Often reasonably innocently.</li>
+	<li><a href="Propaganda.html">Propaganda</a> - All investments are miniscule propagating thrusters added to certain developments and agendas.</li>
+	<li><a href="Selfishness.html">Selfishness</a></li>
+	<li><a href="Sustainable growth.html">Sustainable growth</a> - Growth has to be sustained for some investments to pay off.</li>
+	<li><a href="Virtue signalling.html">Virtue signalling</a> - I'll have you know I invest over 5% of my funds in green energy. The gates of heaven are wide open awaiting my arrival, I'm sure.</li>
+	<li><a href="War.html">War</a> - Highly profitable investments, wars.</li>
 </ul>
 <br>
 <br>
