--- a/content/Knowledge isn't wisdom.html
+++ b/content/Knowledge isn't wisdom.html
@@ -7,12 +7,26 @@
 </blockquote>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Educational crisis.html">Educational crisis</a></strong></li>
-	<li>  <strong><a href="Healthcare.html">Healthcare</a></strong></li>
-	<li>  <strong><a href="Mind-body separation.html">Mind-body separation</a></strong></li>
-	<li>  <strong><a href="Mental health.html">Mental health</a></strong></li>
-	<li>  <strong><a href="Cognitive dissonance.html">Cognitive dissonance</a></strong></li>
-	<li>  <strong><a href="No respect for indigenous wisdom.html">No respect for indigenous wisdom</a></strong></li>
+	<li><a href="Artificial Intelligence.html">Artificial intelligence</a> - Cigarettes used to be one of the biggest turnoffs for me, unless it's in a Wong Kar-Wai film. Now it's someone saying "...so I asked ChatGPT...", even if it was to happen in a Wong Kar-Wai film.</li>
+	<li><a href="Being reasonable.html">Being reasonable</a></li>
+	<li><a href="Big tech.html">Big tech</a> - Min-max function minimising wisdom, maximising knowledge.</li>
+	<li><a href="Breakdown of information infrastructure.html">Breakdown of information infrastructure</a> - Where do you search for information? Is it the same place you look for knowledge? What about wisdom?</li>
+	<li><a href="Cognitive dissonance.html">Cognitive dissonance</a> - Why do our actions produce effects far removed from our intentions. If we have intentions, that is.</li>
+	<li><a href="Delusional domination of nature.html">Delusional domination of nature</a></li>
+	<li><a href="Directionlessness.html">Directionlessness</a></li>
+	<li><a href="Educational crisis.html">Educational crisis</a> - In the rare case where education attempts to instill knowledge, it still fails to give any hint of wisdom. An exception being recess?</li>
+	<li><a href="Faulty meta-optimisation.html">Faulty meta-optimisation</a> - Is meta-optimisation just my way of rephrasing wisdom to suit different minds?</li>
+	<li><a href="Ignorance of the mystical.html">Ignorance of the mystical</a> - What would you say lies within the mystical?</li>
+	<li><a href="Ignorance of the mythical.html">Ignorance of the mythical</a> - What would you say long-lived myths reveal about being human?</li>
+	<li><a href="Illusion of competence.html">Illusion of competence</a> - Knowing is not sufficient to be competent. Was Newton good at shotput?</li>
+	<li><a href="Illusion of understanding.html">Illusion of understanding</a></li>
+	<li><a href="Lack of agency.html">Lack of agency</a> - Passive hobby academics. Is this entire project an exercise in pointless knowledge driven by and driving a lack of agency?</li>
+	<li><a href="Lack of humility.html">Lack of humility</a> - Better to be wise and know little.</li>
+	<li><a href="Map and territory.html">Map and territory</a> - How many mapmakers have never been outside?</li>
+	<li><a href="Only 'can we' never 'should we'.html">Only 'can we' never 'should we'</a></li>
+	<li><a href="Rationalism.html">Rationalism</a> - Knowledge imitating wisdom.</li>
+	<li><a href="Sense-making crisis.html">Sense-making crisis</a></li>
+	<li><a href="Wisdom crisis.html">Wisdom crisis</a> - If only we cared about this distinction.</li>
 </ul>
 <br>
 <br>
