--- a/content/Jevons paradox.html
+++ b/content/Jevons paradox.html
@@ -3,18 +3,15 @@
 <p><strong><a href="https://en.wikipedia.org/wiki/Jevons<em>paradox">In economics, the Jevons paradox occurs when technological progress increases the efficiency with which a resource is used, but the falling cost of use induces increases in demand enough that resource use is increased, rather than reduced</a></strong><a href="https://en.wikipedia.org/wiki/Jevons</em>paradox">.</a> This was originally related to the efficiency and increase in coal use. As technology improves energy efficiency we end up using more rather than less of the resource required for the activity. There is, in other words, always an important nuance to any discussion related to technological advances that promise increased efficiency in that they potentially worsen the problem they claim to solve.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Energy consumption increasing.html">Energy consumption increasing</a></strong></li>
-	<li>  <strong><a href="Net negative caloric extraction.html">Net negative caloric extraction</a></strong></li>
-	<li>  <strong><a href="Growth.html">Growth</a></strong></li>
-	<li>  <strong><a href="Illusion of GDP decoupling.html">Illusion of GDP decoupling</a></strong></li>
-	<li>  <strong><a href="Resources.html">Resources</a></strong></li>
-	<li>  <strong><a href="Material extraction.html">Material extraction</a></strong></li>
-	<li>  <strong><a href="Limits to growth.html">Limits to growth</a></strong></li>
-	<li>  <strong><a href="Naive progress narrative.html">Naive progress narrative</a></strong></li>
-	<li>  <strong><a href="Naive techno-optimism.html">Naive techno-optimism</a></strong></li>
-	<li>  <strong><a href="Delusional domination of nature.html">Delusional domination of nature</a></strong></li>
-	<li>  <strong><a href="Illusion of understanding.html">Illusion of understanding</a></strong></li>
-	<li>  <strong><a href="Resource conflicts.html">Resource conflicts</a></strong></li>
+	<li><a href="Energy.html">Energy</a></li>
+	<li><a href="Energy consumption increasing.html">Energy consumption increasing</a></li>
+	<li><a href="Growth.html">Growth</a></li>
+	<li><a href="Knowledge isn't wisdom.html">Knowledge isn't wisdom</a> - I admit, there has been some rather impressive increases in efficiency of different resources over the years. We obviously know a lot about the science, engineering, and nature of efficiency. How do we use that knowledge?</li>
+	<li><a href="Lack of dark spaces.html">Lack of dark spaces</a> - LEDs are so efficient we could just keep them lit.</li>
+	<li><a href="Material extraction.html">Material extraction</a> - Still we demand more.</li>
+	<li><a href="Over-reliance on technology.html">Over-reliance on technology</a></li>
+	<li><a href="Resources.html">Resources</a> - Never enough.</li>
+	<li><a href="Sense-making crisis.html">Sense-making crisis</a> - Ignoring the Jevons paradox makes the behaviour and effects of modernity appear very strange.</li>
 </ul>
 <br>
 <br>
