Links for cultural control

--- a/content/Lack of cultural control systems.html
+++ b/content/Lack of cultural control systems.html
@@ -1,17 +1,49 @@
 ﻿<title>Lack of cultural control systems</title>
 <h2>Lack of cultural control systems</h2>
-<p>Wisdom, spirituality, animism, and elders have contributed historically to creating <strong>cultural control systems which, as opposed to laws, control behaviours with an open hand.</strong> Modernity mostly lacks cultural control systems since they have been replaced by game theory. When people mention the need for religion, "a new christianity", or a complete destruction of capitalism, I believe the foundational discussion that must be had is one of cultural control systems in general. A faulty control system will lead to complete lack of cultural balance, an absence of any control system whatsoever is unbounded chaos.</p>
+<p>Alternative names: soft control, vernacular control systems.</p>
+<p>Wisdom, spirituality, animism, and elders have contributed historically to creating <strong>cultural control systems which, as opposed to laws, control behaviours with an open hand.</strong> Modernity mostly lacks cultural control systems as these have been replaced by game theory. When people mention the need for religion, "a new christianity", or a complete destruction of capitalism, I believe the foundational discussion that must be had is one of cultural control systems in general. A faulty control system will lead to complete lack of cultural balance, an absence of any control system whatsoever is unbounded chaos. Furthermore, calling it a "control system" gets the point across as to what it might result in but doesn't hint strongly enough at the freedom and openness of this type of control. For example, a feeling of shame after an unwholesome act can be part of a cultural control system.</p>
+<p>Would it be more fruitful to talk of vernacular control or subtle control systems? A shared conscience, cultural expectations and standards, vectors with a light and delicate controlling power shaping the flow of people's behaviour, almost a vague cultural etiquette? Why must we always be so explicit?</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Ancient sunlight, old sunlight, current sunlight.html">Ancient sunlight, old sunlight, current sunlight</a></strong></li>
-	<li>  <strong><a href="Directionlessness.html">Directionlessness</a></strong></li>
-	<li>  <strong><a href="Missing elders.html">Missing elders</a></strong></li>
-	<li>  <strong><a href="Ignored externalities.html">Ignored externalities</a></strong></li>
-	<li>  <strong><a href="Lack of the longterm.html">Lack of the longterm</a></strong></li>
-	<li>  <strong><a href="No precautionary principle.html">No precautionary principle</a></strong></li>
-	<li>  <strong><a href="Only 'can we' never 'should we'.html">Only 'can we' never 'should we'</a></strong></li>
-	<li>  <strong><a href="Capitalism.html">Capitalism</a></strong></li>
-	<li>  <strong><a href="Wisdom crisis.html">Wisdom crisis</a></strong></li>
+	<li><a href="Artificial Intelligence.html">Artificial intelligence</a> - A centralised cultural control system?</li>
+	<li><a href="Blaming the people.html">Blaming the people</a> - In the absence of cultural control systems it becomes a slam-dunk argument to show that people must be controlled from above.</li>
+	<li><a href="Breakdown of information infrastructure.html">Breakdown of information infrastructure</a> - How did information regarding what's right or good pass from person to person? Did it ever? Does it now? How do we help shape the collective behaviour of our co-inhabitants?</li>
+	<li><a href="Bullshit jobs.html">Bullshit jobs</a> - Not only do we lack the cultural control systems which actively discourage pointless jobs, we wander around in a delusional haze where we encourage and respect those whose jobs are pointless. Is your job cleaning or cooking? Oh, I'm sorry. Do you manage the cloud infrastructure for a business' sales data pipeline? Wow, what have you prepared for your next conference presentation? AI-enabled self-service business intelligence dashboards? You truly are a modern sage.</li>
+	<li><a href="Bureaucracy.html">Bureaucracy</a> - Bureaucracy and institutionalisation in general is most likely the result and driver of our lack of cultural control systems.</li>
+	<li><a href="Carelessness.html">Carelessness</a> - We've done our best to not require care to keep society running. It seemed to be working there for a few months, I don't know, in the mid-sixties?</li>
+	<li><a href="Centralisation.html">Centralisation</a></li>
+	<li><a href="Complexity mismatch.html">Complexity mismatch</a> - The complexity of decentralised cultural control systems compared with centralised forms of power and control could make up an entire book in itself, and I'm sure it has. Just to be clear, in case you've forgotten, the argument here isn't one or the other. It is an argument about balance.</li>
+	<li><a href="Consumerism.html">Consumerism</a> - To what extent are we controlled by our participation in consumerism?</li>
+	<li><a href="Democracy failing.html">Democracy failing</a> - One can argue it has long since failed already. All ruling power of the people, along with cultural control systems, have largely been replaced with centralised control structures, game theory as capitalism, business oligopolies and oligarchies, and general nonsensical power struggles.</li>
+	<li><a href="Directionlessness.html">Directionlessness</a></li>
+	<li><a href="Educational systems.html">Educational systems</a></li>
+	<li><a href="Elderly care.html">Elderly care</a></li>
+	<li><a href="Evil.html">Evil</a> - Goes unchecked.</li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a></li>
+	<li><a href="Greed.html">Greed</a> - Greed used to be frowned upon. It is now nearly a virtue. As they say, the shortcut to having all you want is being content with what you have.</li>
+	<li><a href="Healthcare.html">Healthcare</a></li>
+	<li><a href="Ignoring diversity.html">Ignoring diversity</a></li>
+	<li><a href="Imprisonment.html">Imprisonment</a></li>
+	<li><a href="Individualism.html">Individualism</a> - Lacking cultural control systems it becomes simple to view oneself as an individual in a sea of individuals, perhaps not even a sea, an individual bucket of water in a desert of individual buckets covering the dunes in all directions.</li>
+	<li><a href="Lack of humility.html">Lack of humility</a></li>
+	<li><a href="Lack of resilient systems.html">Lack of resilient systems</a></li>
+	<li><a href="Lack of the longterm.html">Lack of the longterm</a> - Cultures' only intentions are to continue.</li>
+	<li><a href="Laws.html">Laws</a> - Laws are control systems for the lawless.</li>
+	<li><a href="Loss of cultural complexity.html">Loss of cultural complexity</a></li>
+	<li><a href="Maximum power principle.html">Maximum power principle</a> - If the notion of cultural control systems make you cringe, consider the currently dominant alternative.</li>
+	<li><a href="Moloch.html">Moloch</a> - Where he stepped in.</li>
+	<li><a href="Monocultures (people).html">Monocultures (people)</a></li>
+	<li><a href="Monopolies.html">Monopolies</a></li>
+	<li><a href="Nothing is local.html">Nothing is local</a> - Next to nothing is local when it comes to power and control.</li>
+	<li><a href="Power concentration to the wrong people.html">Power concentration to the wrong people</a></li>
+	<li><a href="Selfishness.html">Selfishness</a> - One purpose of capitalism is to make selfishness virtuous. I get the idea but I'm unsure of it's success or lack thereof in its application.</li>
+	<li><a href="Social erosion.html">Social erosion</a></li>
+	<li><a href="Surveillance.html">Surveillance</a> - Unspeakable panopticon.</li>
+	<li><a href="The Dark Triad.html">The Dark Triad</a> - A world where the dark triad is free to roam.</li>
+	<li><a href="The spectacle.html">The spectacle</a> - What we might view as the modern expression of a cultural control system in the name of higher powers.</li>
+	<li><a href="Views on human nature.html">Views on human nature</a> - Put an animal in a cage, watch it protest, use its violent protests as the argument for why it must be caged. Death to the holder of the key. Unfortunate that he lacks the key to his own cage.</li>
+	<li><a href="Violence.html">Violence</a> - In the absence of subtle control, less subtle control becomes necessary.</li>
+	<li><a href="Weber's iron cage.html">Weber's iron cage</a> - Behave.</li>
 </ul>
 <br>
 <br>
