--- a/content/Lack of dark spaces.html
+++ b/content/Lack of dark spaces.html
@@ -11,11 +11,25 @@
 </blockquote>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="The minimisation of all things wild.html">The minimisation of all things wild</a></strong></li>
-	<li>  <strong><a href="Ignorance of the mystical.html">Ignorance of the mystical</a></strong></li>
-	<li>  <strong><a href="Out of touch with seasons.html">Out of touch with seasons</a></strong></li>
-	<li>  <strong><a href="The desacration of all places.html">The desacration of all places</a></strong></li>
-	<li>  <strong><a href="Views on human nature.html">Views on human nature</a></strong></li>
+	<li><a href="Architecture.html">Architecture</a> - Much modern architecture abhors darkness and shadows.</li>
+	<li><a href="Biodiversity loss.html">Biodiversity loss</a> - Light pollution disrupts ecosystems.</li>
+	<li><a href="Cars.html">Cars</a> - Streetlights for cars.</li>
+	<li><a href="Clock time.html">Clock time</a> - Diruption of the seasonally dependent day-night cycle.</li>
+	<li><a href="Ecological crisis.html">Ecological crisis</a></li>
+	<li><a href="Energy.html">Energy</a></li>
+	<li><a href="Hyperstimuli.html">Hyperstimuli</a> - We tend to speak of hyperstimuli as the more extreme forms of entertainment and such but the amount of lights of different colours and intensities at night in a modern city can be overwhelming for someone not used to it.</li>
+	<li><a href="Ignorance of everything being sacred.html">Ignorance of everything being sacred</a> - Everything blanketed by a star-wisped night sky.</li>
+	<li><a href="Insect loss.html">Insect loss</a> - Moths to flame.</li>
+	<li><a href="Lack of quiet spaces.html">Lack of quiet spaces</a> - Darkness quietens.</li>
+	<li><a href="Madness of safety.html">Madness of safety</a> - One of the main contributors to the madness of safety.</li>
+	<li><a href="Mental health.html">Mental health</a></li>
+	<li><a href="Mistreatment of animals.html">Mistreatment of animals</a></li>
+	<li><a href="Mistreatment of other humans.html">Mistreatment of other humans</a> - The mistreatment of animals is obvious but somehow it feels far-fetched to put the mistreatment of other humans as something connected to the lack of dark spaces. Should it? We're animals too, y'know. What has been disrupted in our natural behaviours due to artificial light?</li>
+	<li><a href="Out of touch with seasons.html">Out of touch with seasons</a> - Why am I not deeply asleep, belly full of pine needles?</li>
+	<li><a href="Over-reliance on technology.html">Over-reliance on technology</a> - I wonder, if ever there are major breakdowns of the electrical system, how long it would take for people everywhere to get lost in the night sky.</li>
+	<li><a href="Spiritual metacrisis.html">Spiritual metacrisis</a></li>
+	<li><a href="The desacration of all places.html">The desacration of all places</a> - There is a crypt in my local church that is over 900 years old. Along the entire ceiling of the crypt are strips of LED spotlights aimed at every single dark corner. Even the religious seem to fear the darkness of the divine.</li>
+	<li><a href="The minimisation of all things wild.html">The minimisation of all things wild</a></li>
 </ul>
 <br>
 <br>
