--- a/content/Lack of empathy.html
+++ b/content/Lack of empathy.html
@@ -3,14 +3,49 @@
 <p><strong>Empathy is the sharing and understanding of someone else's feelings</strong> or, at the very least, an attempt. It is about relating to others through one's own experiences, picturing oneself in their position. Empathy is, if you will, the precursor to compassion. No empathy, no compassion, no compassion, no collective action to alleviate the sufferings of other beings.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Cognitive dissonance.html">Cognitive dissonance</a></strong></li>
-	<li>  <strong><a href="Mistreatment of animals.html">Mistreatment of animals</a></strong></li>
-	<li>  <strong><a href="Mistreatment of other humans.html">Mistreatment of other humans</a></strong></li>
-	<li>  <strong><a href="Racism.html">Racism</a></strong></li>
-	<li>  <strong><a href="Inequality.html">Inequality</a></strong></li>
-	<li>  <strong><a href="Modern slavery.html">Modern slavery</a></strong></li>
-	<li>  <strong><a href="Migration.html">Migration</a></strong></li>
-	<li>  <strong><a href="Evil.html">Evil</a></strong></li>
+	<li><a href="Animal views.html">Animal views</a> - If we shared the feelings of the animals within the systems of modernity, and perhaps we subconsciously do, we would be destroyed.</li>
+	<li><a href="Apathy.html">Apathy</a></li>
+	<li><a href="Attention hijacking.html">Attention hijacking</a> - I considered if advertising should be on here as well but came to the conclusion that the part of advertising that lacks empathy is the part that hijacks attention. Other things as well, sure, but perhaps advertising in and of itself *can* be harmless? My nostalgic romantic imagines a paper boy yelling "extra! extra!", quaint.</li>
+	<li><a href="Blaming the people.html">Blaming the people</a></li>
+	<li><a href="Bureaucracy.html">Bureaucracy</a> - One of its alleged strengths.</li>
+	<li><a href="Carelessness.html">Carelessness</a></li>
+	<li><a href="Delusional domination of nature.html">Delusional domination of nature</a></li>
+	<li><a href="Discrimination.html">Discrimination</a></li>
+	<li><a href="Disinformation.html">Disinformation</a></li>
+	<li><a href="Dispositionism.html">Dispositionism</a></li>
+	<li><a href="Elderly care.html">Elderly care</a> - Our systems for care are designed to not require someone to care.</li>
+	<li><a href="Emotional crisis.html">Emotional crisis</a></li>
+	<li><a href="Evil.html">Evil</a></li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a> - Some emotional connection to one's responsibilities is often necessary to get the ball rolling.</li>
+	<li><a href="Genocide.html">Genocide</a></li>
+	<li><a href="Healthcare.html">Healthcare</a></li>
+	<li><a href="Ignorance of interconnectedness.html">Ignorance of interconnectedness</a> - Empathy is one of the most important connections between being. A vague sense of noticing that there are others struck by the experience of being alive.</li>
+	<li><a href="Immoral justifications.html">Immoral justifications</a> - Being unempathic will create immoral actions.</li>
+	<li><a href="Industrial slaughter.html">Industrial slaughter</a></li>
+	<li><a href="Inequality.html">Inequality</a></li>
+	<li><a href="Lack of compassion.html">Lack of compassion</a> - Empathy is compassion's prerequisite.</li>
+	<li><a href="Lack of feeling needed.html">Lack of feeling needed</a></li>
+	<li><a href="Lack of love.html">Lack of love</a></li>
+	<li><a href="Meat eating.html">Meat eating</a> - I overheard someone complain about being served tartar steak that "ugh, it tastes like it is nearly still alive". He sounded like he was nearly still alive.</li>
+	<li><a href="Mental health.html">Mental health</a></li>
+	<li><a href="Mistreatment of animals.html">Mistreatment of animals</a></li>
+	<li><a href="Mistreatment of other humans.html">Mistreatment of other humans</a></li>
+	<li><a href="Modern slavery.html">Modern slavery</a></li>
+	<li><a href="No precautionary principle.html">No precautionary principle</a> - Whenever you approach an action that will have consequences you must sense the threads reaching from that action outward to all that you care about and make sure no thread is already stretched close to breaking. The more you care, the more cautious you must be.</li>
+	<li><a href="Oppressive tyrannies for the good of its victims.html">Oppressive tyrannies for the good of its victims</a></li>
+	<li><a href="Parenting.html">Parenting</a> - How many parents are emotionally mature enough to dare to relate to the feelings of children?</li>
+	<li><a href="Power concentration to the wrong people.html">Power concentration to the wrong people</a></li>
+	<li><a href="Racism.html">Racism</a></li>
+	<li><a href="Selfishness.html">Selfishness</a></li>
+	<li><a href="Sense-making crisis.html">Sense-making crisis</a> - Uncaring, nothing makes sense.</li>
+	<li><a href="Sexism.html">Sexism</a></li>
+	<li><a href="Social erosion.html">Social erosion</a></li>
+	<li><a href="Spiritual metacrisis.html">Spiritual metacrisis</a></li>
+	<li><a href="Surveillance.html">Surveillance</a> - You do care, but rarely for those you keep under watch.</li>
+	<li><a href="The Dark Triad.html">The Dark Triad</a></li>
+	<li><a href="Violence.html">Violence</a></li>
+	<li><a href="War.html">War</a></li>
+	<li><a href="Wisdom crisis.html">Wisdom crisis</a></li>
 </ul>
 <br>
 <br>
