--- a/content/Lack of faith in anything.html
+++ b/content/Lack of faith in anything.html
@@ -7,10 +7,31 @@
 <p>To lack faith is to lack the belief that there is any possibility of betterment, redemption, to lack trust in someone or something to make itself present. It also means lacking the confidence of what should result from certain actions. <strong>Without faith in a process of development one gets nowhere</strong>, but then again maybe finding that faith is a part of the process. In early Buddhism, faith focused on the triratna, the so called three jewels. These could, in a broader context, be seen as the faith in the good, the faith in the teachings of the good, and the community seeking to learn from that teaching. Even more generally, do you believe there is a divine good within? Do you believe this good moves us towards certain actions and views when the mind is still? Do you believe there are others with you in this? I hope there are readers who answer yes to this.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Nihilism.html">Nihilism</a></strong></li>
-	<li>  <strong><a href="Meaning crisis.html">Meaning crisis</a></strong></li>
-	<li>  <strong><a href="Sense-making crisis.html">Sense-making crisis</a></strong></li>
-	<li>  <strong><a href="Views on human nature.html">Views on human nature</a></strong></li>
+	<li><a href="Addiction.html">Addiction</a></li>
+	<li><a href="Apathy.html">Apathy</a></li>
+	<li><a href="Avoiding radical options.html">Avoiding radical options</a> - Only radical options remain, faithless or not.</li>
+	<li><a href="Carelessness.html">Carelessness</a></li>
+	<li><a href="Despair.html">Despair</a></li>
+	<li><a href="Directionlessness.html">Directionlessness</a> - Wandering in a desolate wasteland requires faith that something lies beyond the horizon in the direction of one's wandering.</li>
+	<li><a href="Emotional crisis.html">Emotional crisis</a></li>
+	<li><a href="End of history.html">End of history</a> - The end of the world as we know it is, as we should all know by now, not the end of the world full stop.</li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a> - I find most people's lack of faith off-putting. Then again, a certain type of faith only grows in faithless soil.</li>
+	<li><a href="Hedonism.html">Hedonism</a></li>
+	<li><a href="Ignorance of interconnectedness.html">Ignorance of interconnectedness</a> - It takes eyes of faith to see.</li>
+	<li><a href="Illusion of understanding.html">Illusion of understanding</a></li>
+	<li><a href="Lack of agency.html">Lack of agency</a> - Act and see where it takes you.</li>
+	<li><a href="Lack of feeling needed.html">Lack of feeling needed</a></li>
+	<li><a href="Lack of purpose.html">Lack of purpose</a> - In and behind faith lies purpose.</li>
+	<li><a href="Lack of visions.html">Lack of visions</a> - Why should one face the hurt of envisioning what won't be?</li>
+	<li><a href="Meaning crisis.html">Meaning crisis</a></li>
+	<li><a href="Mental health.html">Mental health</a></li>
+	<li><a href="Misinformation.html">Misinformation</a> - Blinded, you only ever speak of the dark.</li>
+	<li><a href="Nihilism.html">Nihilism</a> - Nihilism is, what, a mechanism of protection against the fear that there is nothing behind faith?</li>
+	<li><a href="Nuclear war.html">Nuclear war</a> - That final faithless act.</li>
+	<li><a href="Slow change.html">Slow change</a> - Believing nothing can change, you don't act to change.</li>
+	<li><a href="Social erosion.html">Social erosion</a> - Lack of faith in any*one*.</li>
+	<li><a href="Spiritual metacrisis.html">Spiritual metacrisis</a></li>
+	<li><a href="Suicide.html">Suicide</a> - Faith in endings.</li>
 </ul>
 <br>
 <br>
